--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "@id": "https://raw.githubusercontent.com/danandrei/flow-ace/module-descriptor/package.json",
+  "@context": [
+    "http://schema.jillix.net/context/module.jsonld"
+  ],
   "name": "flow-ace",
   "version": "0.1.0",
   "description": "Ace editor wrapper for Flow",
@@ -23,5 +27,77 @@
   "homepage": "https://github.com/danandrei/flow-ace#readme",
   "dependencies": {
     "brace": "^0.9.0"
-  }
+  },
+  "exports": [
+    {
+      "name": "init",
+      "description": "initializes a new state",
+      "sets": {
+        "state": [
+          "editor",
+          "options"
+        ]
+      },
+      "needs": {
+        "args": [
+          "events",
+          "events.$",
+          "options"
+        ]
+      }
+    },
+    {
+      "name": "set",
+      "description": "Set new editor value",
+      "sets": {
+        "state": [
+          "editor"
+        ]
+      },
+      "needs": {
+        "state": [
+          "editor"
+        ],
+        "needs": [
+          "$args"
+        ],
+        "args": "$pathToContent"
+      }
+    },
+    {
+      "name": "setOptions",
+      "description": "Set new editor options.",
+      "sets": {
+        "state": [
+          "editor"
+        ]
+      },
+      "needs": {
+        "state": [
+          "editor"
+        ],
+        "args": [
+          "options"
+        ],
+        "data": [
+          "options"
+        ]
+      }
+    },
+    {
+      "name": "get",
+      "description": "Get editor value.",
+      "sets": {
+        "data": [
+          "$args"
+        ]
+      },
+      "needs": {
+        "state": [
+          "editor"
+        ],
+        "args": "$pathToContent"
+      }
+    }
+  ]
 }
